step4-virtual-hosting/001-ingress/004-ingress-daemonset.yaml
---
kind: DaemonSet
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    app: traefik-ingress-lb
    app.kubernetes.io/name: traefik-ingress
    app.kubernetes.io/instance: traefik-system
    app.kubernetes.io/version: latest
    app.kubernetes.io/component: controller
    app.kubernetes.io/part-of: k3s-stack
spec:
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: traefik-ingress-lb
        app.kubernetes.io/name: traefik-ingress
        app.kubernetes.io/instance: traefik-system
        app.kubernetes.io/version: latest
        app.kubernetes.io/component: controller
        app.kubernetes.io/part-of: k3s-stack
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      hostNetwork: true
      containers:
      - image: traefik
        name: traefik-ingress-lb
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: https
          containerPort: 443
          hostPort: 443
        - name: admin
          containerPort: 8080
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
        - --api
        - --kubernetes
        - --logLevel=INFO
