step4-virtual-hosting/001-ingress/005-ui-clusterip.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-system
  labels:
    app: traefik-ingress-lb
    app.kubernetes.io/name: traefik-ingress
    app.kubernetes.io/instance: traefik-system
    app.kubernetes.io/version: latest
    app.kubernetes.io/component: controller
    app.kubernetes.io/part-of: k3s-stack
spec:
  selector:
    app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 8080
      name: admin
